# auditlog-webhook

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml  requirements.txt  test_validation.ps1  test_validation.sh  test_validation_direct.py  test_webhook.ps1  test_webhook.sh
.github/workflows/: docker-build.yml
src/: __init__.py  main.py
