[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-log-webhook"
version = "0.1.0"
description = "A Python project for handling audit log webhooks"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
